# Flight-Management-System-Client

./: .gitignore  CMakeLists.txt  Main.qml  MainWindow.qml  README-zh.md  README.md  main.cpp
api/: networkhandler.cpp  networkhandler.h
components/: AddressPicker.qml  AltAirDatePicker.qml  FilterBar.qml  FlightFavoriteCard.qml  FlightInfoCard.qml  FlightInfoEditCard.qml  IconButton.qml  MessageItem.qml  NoteCard.qml  NoteList.qml  OrderInfoCard.qml  OrderInfoCard.qml.autosave  RebookFlightInfoCard.qml  RechargeEntry.qml  TimeProgressBar.qml
static/: sites.js
storage/: manager.h  message.h  userinfo.h
views/: AboutView.qml  AgentServerView.qml  ClientServerView.qml  EditPersonalInfo.qml  FindVIew.qml  FindView.qml  FlightFavoriteView.qml  FlightInfoEditView.qml  FlightInfoView.qml  FlightInfoView.qml.autosave  HomeView.qml  HomeView.qml.autosave  LoginView.qml  OrderDetailView.qml  OrderRebookingView.qml  OrdersView.qml  ProfileView.qml  RegisterView.qml  UsersInfoView.qml
